# news-headline-trends

./: .dockerignore  .gitignore  Dockerfile  README.md  allow_words.csv  allowed_words.csv  deployment.md  docker-compose.yml  pg_reload.sql  profiles.yml  run-nytdata-load.sh  setup.sh
.github/workflows/: fly.yaml
api/: Dockerfile  main.py  requirements.txt
api/go/: Dockerfile  go.sum  main.go
api/python/: Dockerfile  main.py  requirements.txt
app/: Dockerfile  app.py  fly.toml  requirements.txt
app/assets/: custom.css
app/pages/: about.py  home.py
dashboard/: dash_app.py
db/: Dockerfile
deploy/local/: docker-compose.yml  run-nytdata-load.sh
deploy/prod/infra/: .terraform.lock.hcl  README.md  cloud_run.tf  databases.tf  iam.tf  outputs.tf  providers.tf  secrets.tf  services.tf  (+2 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Graph.jsx  KeywordGraphTablePanel.jsx  KeywordInput.jsx  KeywordPill.jsx  Table.jsx
go-api/: go.mod  go.sum  main.go
nytarchive/: README.md  pyproject.toml
nytarchive/src/nytarchive/: __init__.py  nytarchive.py  run.py
nytdata-clj/: Dockerfile  README.md  build.clj  deps.edn  run-nytdata-load.sh
nytdata-clj/resources/: allow_words.txt
sql/: dbt_project.yml  export.sql  profiles.yml  setup.sql
sql-scripts/: clean.sql  setup.sql
sql/models/: dt_distribution.sql  monthly_content_counts.sql  monthly_section_counts.sql  multimedia_proportion_section.sql  schema.yml  sn_distribution.sql  word_headlines.sql  words.sql  yearly_dt_sn_counts.sql  yearly_multimedia_proportion.sql
(+9 files in other folders)
